# elo_multiple

./: .coverage  .env.hash  .env.json  .gitignore  Makefile  README.md  pyproject.toml  spec.md
elo_app/application/: services.py
elo_app/domain/: elo_engine.py  matchup.py  models.py  policies.py
elo_app/infrastructure/: db.py  repos.py
elo_app/rules/: base.py  belote.py  tarot.py
elo_app/ui/: streamlit_app.py
tests/: conftest.py  helpers.py
tests/unit/: test_elo_engine.py  test_group_management.py  test_rules_belote.py  test_rules_tarot.py  test_service_flow.py  test_service_stats.py  test_trueskill_surprise.py
